# MPI-test

./: .gitignore  CMakeLists.txt  README.md  hello_world.cpp  primes.cpp
